# stfn_object_detector

./: .gitignore  CMakeLists.txt  detector_standalone.rviz  package.xml  stfn_object_detector.sublime-workspace
include/: GODAlignment.hpp  GODDetection.hpp  GODDetectionParams.hpp  GODImageMemory.hpp  GODMapping.hpp  GODTraining.hpp  ModelDBStub.hpp
include/detector/: CRForest.hpp  CRForestDetector.hpp  CRPatch.hpp  CRTree.hpp  Candidate.hpp  GpuHoG.hpp  HoG.hpp  TrainStats.hpp  myutils.hpp
launch/: align.launch  detect.launch  detection_service.launch  map.launch  test.launch  train.launch
launch/config/: aligner.yaml  aligner_2.yaml  aligner_test.yaml  default.yaml  detector.yaml  trainer.yaml
msg/: Detection2D.msg  Detection2DArr.msg  Detection3D.msg  Detection3DArr.msg
nodes/: CMakeLists.txt  aligner.cpp  aligner2.cpp  detector.cpp  icp.cpp  mapper.cpp  trainer.cpp
scripts/: aliger_params_to_yaml.py  common.py  create_hrftraining_from_bags.py  test_aligner_optimization.py
src/: GODAlignment.cpp  GODDetection.cpp  GODImageMemory.cpp  GODMapping.cpp  GODTraining.cpp  detect_with_pose_service.cpp
src/detector/: CRForest-Detector.cpp  CRForest.cpp  CRForestDetector.cpp  CRPatch.cpp  CRTree.cpp  HoG.cpp  myhog.cpp
srv/: DetectWithPose.srv
test/: aligner_evaluator.py  aligner_fitness_checker.cpp  aligner_optimizer_es.py  aligner_optimizer_ga.py  aligner_optimizer_hs.py  aligner_optimizer_pso.py  aligner_parameter_optimizer.py  hs_result_2014_11_11_13_55_19.txt  hs_result_2014_11_13_16_32_42.txt
test/results/: opti_result_es_2015_01_30_18_53.txt  opti_result_es_2015_01_30_18_55.txt  opti_result_es_2015_02_01_18_02.txt  opti_result_es_2015_02_12_17_51.txt  opti_result_ga_2015_01_30_18_53.txt  opti_result_ga_2015_01_30_18_55.txt  opti_result_ga_2015_02_01_18_02.txt  opti_result_ga_2015_02_03_13_38.txt  opti_result_ga_2015_02_12_17_51.txt  opti_result_hs_2015_02_01_17_49.txt  opti_result_hs_2015_02_03_13_39.txt  opti_result_hs_2015_02_12_17_51.txt  opti_result_hs_2015_02_13_19_03.txt  opti_result_pso_2015_01_30_17_14.txt  opti_result_pso_2015_01_30_18_54.txt  opti_result_pso_2015_02_01_18_02.txt  opti_result_pso_2015_02_03_13_30.txt  opti_result_pso_2015_02_03_13_37.txt  opti_result_pso_2015_02_03_13_39.txt  opti_result_pso_2015_02_15_21_43.txt  opti_result_pso_2015_02_16_10_30.txt
